Provide a gRPC alternative of HTTP's /version API
Fix #14599
